# mylly-engine

./: .gitmodules  README.md
engine/: Makefile  README.md  deps.mk
engine/ai/: ai.c  ai.h  behaviour.c  behaviour.h  node.c  node.h
engine/collections/: array.c  array.h  list.h  stack.h
engine/core/: array.c  array.h  arraylist.h  defines.h  list.h  memory.c  memory.h  mylly.c  mylly.h  string.c  string.h  time.c  time.h  types.h
engine/framework/: resources.c  resources.h
engine/input/: input.c  input.h  keybind.c  keybind.h
engine/io/: config.c  config.h  console.c  console.h  file.c  file.h  input.c  input.h  keys.h  log.c  log.h
engine/math/: math.h  matrix.c  matrix.h  quaternion.c  quaternion.h  random.h  vector.c  vector.h
engine/mgui/: inputhook.c  inputhook.h  mgui.c  mgui.h  text.c  text.h  uiinput.c  vector.c  vector.h  widget.c  widget.h
engine/mgui/widgets/: button.c  button.h  checkbox.c  checkbox.h  grid.c  group.c  group.h  inputbox.c  inputbox.h  label.c  label.h  panel.c  panel.h
engine/platform/: input.c  input.h  inputhook.c  inputhook.h  thread.c  thread.h  timer.c  timer.h  window.c  window.h
engine/renderer/: buffer.c  buffer.h  buffercache.c  buffercache.h  colour.c  colour.h  debug.c  debug.h  font.c  font.h  fontpacker.c  fontpacker.h  mesh.c  mesh.h  model.c  model.h  renderer.h  rendersystem.c  rendersystem.h  renderview.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  texture.h  vbcache.c  vbcache.h  vertex.h  vertexbuffer.h
engine/renderer/opengl/: extensions.c  extensions.h  renderer.c
engine/resources/: resource.h  resourceparser.c  resourceparser.h  resources.c  resources.h
engine/resources/shaders/: default-particle.glsl  default-sprite.glsl  default-textured.glsl  default-ui-font.glsl  default-ui.glsl  test-animated.glsl  test.glsl
engine/resources/shaders/inc/: mylly.glinc
engine/scene/: animator.c  animator.h  camera.c  camera.h  emitter.c  emitter.h  model.c  object.c  object.h  scene.c  scene.h  sprite.c  sprite.h  spriteanimation.c  spriteanimation.h
example/: Makefile  asteroid.cpp  asteroid.h  asteroidhandler.cpp  asteroidhandler.h  collisionhandler.cpp  collisionhandler.h  entity.cpp  entity.h  floatingobject.cpp  floatingobject.h  game.cpp  game.h  gamedefs.h  gamescene.cpp  gamescene.h  inputhandler.cpp  inputhandler.h  main.cpp  menuscene.cpp  menuscene.h  powerup.cpp  powerup.h  projectile.cpp  projectile.h  projectilehandler.cpp  projectilehandler.h  scene.cpp  scene.h  ship.cpp  ship.h  ufo.cpp  ufo.h  ui.cpp  ui.h  utils.cpp  utils.h  vector.h
example/main/: main.c
mylly/: CMakeLists.txt  Makefile  README.md  deps.mk
mylly/ai/: ai.c  ai.h  node.c  node.h
mylly/audio/: audiobuffer.c  audiobuffer.h  audiosource.c  audiosource.h  audiosystem.c  audiosystem.h  sound.c  sound.h
mylly/collections/: array.c  array.h  list.h
mylly/core/: defines.h  memory.c  memory.h  mylly.c  mylly.h  parallel.c  parallel.h  ref.h  string.c  string.h  time.c  time.h  types.h
mylly/io/: config.h  console.c  file.c  input.c  input.h  keys.h  log.c  log.h
mylly/math/: math.h  quaternion.c  quaternion.h  random.c  random.h  vector.c  vector.h
mylly/mgui/: mgui.c  mgui.h  mguitypes.h  text.c  text.h  uiinput.c  uiinput.h  vectori.c  vectori.h  widget.c  widget.h
mylly/mgui/widgets/: button.c  button.h  checkbox.c  checkbox.h  colourpicker.c  colourpicker.h  dropdown.c  dropdown.h  grid.c  grid.h  inputbox.c  inputbox.h  label.c  panel.c  panel.h  slider.c  slider.h
mylly/platform/: inputhook.c  inputhook.h  platform.c  platform.h  window.c  window.h
mylly/renderer/: buffer.h  buffercache.c  buffercache.h  colour.c  colour.h  debug.c  debug.h  font.c  fontpacker.c  material.c  material.h  mesh.c  mesh.h  renderer.h  rendersystem.c  rendersystem.h  renderview.h  shader.c  shader.h  shaderdata.c  shaderdata.h  splashscreen.c  splashscreen.h  texture.c  texture.h  vbcache.c  vertex.h
mylly/renderer/opengl/: defaultshaders.c  extensions.c  extensions.h  framebuffer.c  framebuffer.h  opengl.h  renderer.c
mylly/resources/: emitterparser.c  emitterparser.h  mtlparser.c  mtlparser.h  objparser.c  objparser.h  resource.h  resourceparser.c  resourceparser.h  resources.c  resources.h
mylly/resources/shaders/: default-colour-picker.glsl  default-debug-overlay.glsl  default-debug.glsl  default-lit-normal.glsl  default-lit.glsl  default-particle.glsl  default-phong-normal.glsl  default-phong.glsl  default-sprite.glsl  default-textured.glsl  default-ui-font.glsl  default-ui.glsl  deferred-ambient.glsl  deferred-phong.glsl  effect-chromatic-aberration.glsl  effect-fxaa.glsl  effect-glitch.glsl
mylly/resources/shaders/inc/: lighting.glinc  mylly.glinc
mylly/scene/: camera.c  camera.h  emitter.c  emitter.h  light.c  light.h  model.c  model.h  object.c  object.h  scene.c  scene.h  sprite.c  sprite.h  spriteanimation.c  spriteanimation.h
test/: Makefile  main.c  main.h  object.c  quaternion.c
